New Structure, New Links Mechanism

--- a/fallout_quests/fallout_quests.toml
+++ b/fallout_quests/fallout_quests.toml
@@ -1,15 +1,16 @@
 [debug]
+demo = false
 debug = false
 console = false
+log_str_len = 256
 
 [download]
-enabled = true
+enabled = false
 overwrite = false
 
 [parse]
 enabled = true
 overwrite = true
-name_filter = ''
 
 [build]
 enabled = true
